# localscrobble

./: .gitignore  LICENSE  Main.hs  Options.hs  README.md  azure-pipelines.yml  localscrobble.cabal
analysis/: list-scrobbles.sql  top-tracks.sql
