name:                localscrobble
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              NanoTech
maintainer:          nanotech@nanotechcorp.net
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable localscrobble
  default-language: Haskell2010
  -- hs-source-dirs:
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends: base                       >= 4.6 && < 5
               , bytestring                 >= 0.10 && < 0.11
               , direct-sqlite              >= 2.3 && < 2.4
               , http-types                 >= 0.8 && < 0.13
               , safe                       >= 0.3 && < 0.4
               , sqlite-simple              >= 0.4 && < 0.5
               , text                       >= 1.1 && < 1.3
               , time                       >= 1.4 && < 1.10
               , wai                        >= 3.0 && < 3.3
               , wai-logger                 >= 2.2 && < 2.4
               , warp                       >= 3.0 && < 3.3
