name:                localscrobble
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              NanoTech
maintainer:          nanotech@nanotechcorp.net
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable localscrobble
  default-language: Haskell2010
  -- hs-source-dirs:
  main-is: Main.hs
  other-modules: Options
  -- other-extensions:
  build-depends: base                       >= 4.6 && < 5
               , base16-bytestring          >= 0.1 && < 0.2
               , bytestring                 >= 0.10 && < 0.11
               , cryptohash-md5             >= 0.11 && < 0.12
               , direct-sqlite              >= 2.3 && < 2.4
               , entropy                    >= 0.4 && < 0.5
               , http-types                 >= 0.8 && < 0.13
               , optparse-applicative       >= 0.14 && < 0.16
               , safe                       >= 0.3 && < 0.4
               , sqlite-simple              >= 0.4 && < 0.5
               , text                       >= 1.1 && < 1.3
               , time                       >= 1.4 && < 1.10
               , wai                        >= 3.0 && < 3.3
               , wai-logger                 >= 2.2 && < 2.4
               , warp                       >= 3.0 && < 3.3
